@@ -77,6 +77,10 @@ enum server_updated_arg4
     SERVER_PATCHED,
     SERVER_RCS_DIFF
 };
+#ifdef __STDC__
+struct buffer;
+#endif
+
 extern void server_updated
     PROTO((struct file_info *finfo, Vers_TS *vers,
 	   enum server_updated_arg4 updated, mode_t mode,
